<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <live.qubbe.android.utils.SquareImage
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/trans_black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/display_16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/display_32dp"
            android:layout_marginBottom="@dimen/display_8dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/display_8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/display_34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/display_32dp"
            android:layout_marginBottom="@dimen/display_8dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/display_8dp"
            android:text="@string/get_started_text"
            android:textColor="@color/trans_white"
            android:textSize="@dimen/display_22sp"
            app:layout_constraintBottom_toTopOf="@+id/pulseProgress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/pulseProgress"
            android:layout_width="@dimen/display_64dp"
            android:layout_height="@dimen/display_64dp"
            app:pulse_color="@color/grey200"
            app:pulse_count="4"
            app:pulse_duration="3000"
            app:pulse_interpolator="Linear"
            app:pulse_repeat="0"
            app:pulse_startFromScratch="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/googleBtn"
            android:layout_marginBottom="@dimen/display_14dp"
            />

        <Button
            android:id="@+id/googleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/termsTxt"
            android:layout_marginStart="@dimen/display_16dp"
            android:layout_marginEnd="@dimen/display_16dp"
            android:background="@drawable/rounded_btn_google"
            android:text="@string/google_account"
            android:textColor="@color/white"
            android:textSize="@dimen/display_20sp"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/display_32dp"/>

        <TextView
            android:id="@+id/termsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_in_you_agree_to_our"
            android:textSize="@dimen/display_18sp"
            android:textColor="@color/trans_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/termsBtn"
            android:layout_marginBottom="@dimen/display_4dp"/>

        <TextView
            android:id="@+id/termsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_amp_policy"
            android:textSize="@dimen/display_18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>